tests/ui/traits/deny-builtin-object-impl.next.stderr
error[E0322]: explicit impls for the `NotImplYesObject` trait are not permitted
  --> $DIR/deny-builtin-object-impl.rs:20:1
   |
LL | impl NotImplYesObject for () {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ impl of `NotImplYesObject` not allowed

error[E0038]: the trait `YesImplNotObject2` is not dyn compatible
  --> $DIR/deny-builtin-object-impl.rs:23:28
   |
LL | impl YesImplNotObject2 for dyn YesImplNotObject2 {}
   |                            ^^^^^^^^^^^^^^^^^^^^^ `YesImplNotObject2` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/deny-builtin-object-impl.rs:17:1
   |
LL | #[rustc_dyn_incompatible_trait]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ...because it opted out of dyn-compatibility
LL | trait YesImplNotObject2 {}
   |       ----------------- this trait is not dyn compatible...

error[E0038]: the trait `NotImplNotObject` is not dyn compatible
  --> $DIR/deny-builtin-object-impl.rs:37:36
   |
LL |     test_not_impl_not_object::<dyn NotImplNotObject>();
   |                                    ^^^^^^^^^^^^^^^^ `NotImplNotObject` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/deny-builtin-object-impl.rs:11:1
   |
LL | #[rustc_dyn_incompatible_trait]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ...because it opted out of dyn-compatibility
LL | trait NotImplNotObject {}
   |       ---------------- this trait is not dyn compatible...

error[E0038]: the trait `YesImplNotObject` is not dyn compatible
  --> $DIR/deny-builtin-object-impl.rs:40:36
   |
LL |     test_yes_impl_not_object::<dyn YesImplNotObject>();
   |                                    ^^^^^^^^^^^^^^^^ `YesImplNotObject` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/deny-builtin-object-impl.rs:14:1
   |
LL | #[rustc_dyn_incompatible_trait]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ...because it opted out of dyn-compatibility
LL | trait YesImplNotObject {}
   |       ---------------- this trait is not dyn compatible...

error[E0038]: the trait `YesImplNotObject2` is not dyn compatible
  --> $DIR/deny-builtin-object-impl.rs:43:37
   |
LL |     test_yes_impl_not_object2::<dyn YesImplNotObject2>();
   |                                     ^^^^^^^^^^^^^^^^^ `YesImplNotObject2` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/deny-builtin-object-impl.rs:17:1
   |
LL | #[rustc_dyn_incompatible_trait]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ...because it opted out of dyn-compatibility
LL | trait YesImplNotObject2 {}
   |       ----------------- this trait is not dyn compatible...

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0038, E0322.
For more information about an error, try `rustc --explain E0038`.
